[project]
name = "arhoca"
version = "0.1.0"
description = ""
authors = [
    {name = "Sandro Hauri",email = "sandro.hauri@sbb.ch"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "theano (>=1.0.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
